--- a/Javascript/menu/style.css
+++ b/Javascript/menu/style.css
@@ -17,6 +17,7 @@ header {
     background-color: grey;
     flex-direction: column;
     align-items: center;
+    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.3);
 }
 
 nav {
@@ -44,6 +45,7 @@ nav {
 .active>.menuContent {
     display: flex;
     flex-direction: column;
+    box-shadow: -3px 3px 3px rgba(0, 0, 0, 0.3);
 }
 
 .menuLabel,
