--- a/Javascript/chrono/style.css
+++ b/Javascript/chrono/style.css
@@ -48,6 +48,14 @@ h1 {
 #chrono {
     flex: 2;
     font-size: 30vh;
+    background-color: rgba(0, 0, 0, 0.4);
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+    border-radius: 50vh;
+    padding: 5vh 10vw;
+}
+
+#chrono.pause {
+    color: red;
 }
 
 #boutons {
