--- a/EVAL_JS_Nathanael/css/style.css
+++ b/EVAL_JS_Nathanael/css/style.css
@@ -3,6 +3,7 @@ body {
     background-color: peachpuff;
     height: 100vh;
     margin: 0;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
 h1 {
@@ -44,6 +45,17 @@ h1 {
     width: 50vw;
     flex: 2;
 }
+
+#buttons button {
+    flex: 1;
+    margin: 0 5vw;
+    height: 5vh;
+    font-size: 2vh;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+
+/********************** CLASSES FLEX ***********************/
 
 .flex {
     display: flex;
