--- a/serverWordpress/wp-content/plugins/livredor/design.css
+++ b/serverWordpress/wp-content/plugins/livredor/design.css
@@ -5,28 +5,34 @@
 #livredorMessages {
     width: 100%;
     height: 25vh;
-    background-color: rgb(255, 230, 128);
+    border: 5px solid rgb(126, 92, 72);
     overflow: hidden;
 }
 
 .livredorMessage {
+    background-color: rgb(255, 230, 128);
+    font-family: 'Gabriola';
     display: flex;
     flex-direction: column;
     height: 25vh;
     width: 100%;
     padding: 2vh 2vw;
+    font-size: 22px;
+    font-weight: bold;
+    color: rgb(20, 20, 30);
 }
 
 .livredorMessage .date {
     flex: 1;
     display: flex;
+    flex-direction: row;
     align-items: center;
     text-align: left;
 }
 
 .livredorMessage .message {
-    font-size: 20px;
-    flex: 5;
+    font-size: 25px;
+    flex: 8;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -36,6 +42,7 @@
 .livredorMessage .name {
     flex: 1;
     display: flex;
+    flex-direction: row-reverse;
     align-items: center;
     text-align: right;
 }
